--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 Bin/
 UnityGenerated/
 Assets/AssetStoreTools*
+/[Uu]ser[Ss]ettings/
 
 #Unity UWP generated (UPW folder might be partialy includet in the future see Microsoft/GalaxyExplorer/)
 UWP/
@@ -95,3 +96,5 @@ $RECYCLE.BIN/
 .Trashes
 
 eol-changed.txt
+
+.idea
